--- a/src/pages/includes/css/art.css
+++ b/src/pages/includes/css/art.css
@@ -13,7 +13,7 @@
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .art-title {
@@ -26,9 +26,10 @@
 }
 
 .art-gallery {
+    width: calc(fit-content + 100px);
+    height: fit-content;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
-    /* align-content: center; */
+    align-content: center;
+    overflow: scroll;
 }
