--- a/src/pages/includes/css/projects.css
+++ b/src/pages/includes/css/projects.css
@@ -53,3 +53,27 @@
     justify-content: space-evenly;
     overflow: scroll;
 }
+
+.projects-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    /* justify-content:flex-start; */
+    
+}
+
+.projects-img-description {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    width: 400px;
+    line-height: 2;
+}
+
+.projects-img-description-title {
+    font-size: 20px;
+    /* text-align: center; */
+    margin-top: 18px;
+    font-size: 24px;
+}
