--- a/src/pages/includes/css/art.css
+++ b/src/pages/includes/css/art.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
-    height: 91vh;
+    /* height: 91vh; */
     /* align-content: center; */
 }
 
@@ -14,22 +14,34 @@
     justify-content: center;
     align-content: center;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .art-title {
     display: flex;
     justify-content: center;
-    /* align-content: center; */
-    width: 100vw;
+    align-content: center;
+    width: 95vw;
     font-size: 36px;
     font-family: 'Ramaraja';
 }
 
+.art-image {
+    width: 25vw;
+    height: 25vw;
+}
+
 .art-gallery {
-    width: calc(fit-content + 100px);
-    height: fit-content;
+    margin-top: 4vw ;
+    width: 95vw;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-content: center;
+    justify-content: space-evenly;
     overflow: scroll;
+}
+
+.art-piece-container {
+    margin-bottom: 4vw;
 }
