--- a/src/pages/includes/css/projects.css
+++ b/src/pages/includes/css/projects.css
@@ -9,21 +9,15 @@
 
 .projects-img-container {
     background-color: #eddec0;
-    width: 400px;
-    height: 400px;
+    width: 25vw;
+    height: 25vw;
     display: flex;
     align-content: center;
     justify-content: center;
     /* border-radius: 50%;  */
     flex-wrap: wrap;
     flex-direction: row;
-    transition: transform 250ms;
 }
-
-.projects-img-container:hover {
-    cursor: pointer;
-    transform: translateY(-30px);
-  }
 
 .projects-header {
     display: flex;
@@ -32,26 +26,26 @@
     justify-content: center;
     align-content: center;
     /* margin-bottom: 30px; */
+    margin-top: 30px;
+    /* margin-bottom: 30px; */
 }
 
 .projects-title {
     display: flex;
     justify-content: center;
-    /* align-content: center; */
+    align-content: center;
     width: 100vw;
     font-size: 36px;
     font-family: 'Ramaraja';
 }
 
 .projects-gallery {
-    width: 100vw;
-    height: fit-content;
-    padding-top: 40px;
+    width: 95vw;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-content: center;
     justify-content: space-evenly;
-    overflow: scroll;
 }
 
 .projects-item {
@@ -67,13 +61,17 @@
     justify-content: center;
     align-content: center;
     flex-direction: column;
-    width: 400px;
+    width: 25vw;
     line-height: 2;
 }
 
-.projects-img-description-title {
+.projects-img {
+    width: 16vw;
+    height: 16vw;
+}
+
+/* .projects-img-description-title {
     font-size: 20px;
-    /* text-align: center; */
     margin-top: 18px;
     font-size: 24px;
-}
+} */
