--- a/src/pages/includes/css/home.css
+++ b/src/pages/includes/css/home.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    height: 91vh;
+    height: 100vh;
   }
 
 .home-row-one {
@@ -13,11 +13,20 @@
   flex-direction: row;
   justify-content: center;
   width: 100vw;
+  margin-bottom: -1.3em;
+  @media screen and (width: 896px) {
+    transition: 200ms;
+    margin-bottom: 5em;
+  }
 }
 
 .home-row-two {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: -44px;
+  margin-top: -1.5em;
+  @media screen and (width: 896px) {
+    transition: 200ms;
+    margin-top: 5em;
+  }
 }
