--- a/src/pages/includes/css/projects.css
+++ b/src/pages/includes/css/projects.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: center;
     align-content: flex-start;
-    height: 95vh;
+    /* height: 95vh; */
 }
 
 .projects-header {
