--- a/src/pages/includes/css/projectPiece.css
+++ b/src/pages/includes/css/projectPiece.css
@@ -14,6 +14,7 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
+    padding: 1em;
 }
 
 .project-piece-img {
@@ -33,6 +34,7 @@
     align-content: center;
     opacity: 0;
     position: absolute;
+    padding: 1em;
 }
 
 
@@ -44,6 +46,6 @@
     align-content: center;
     transition: 300ms;
     background-color: rgb(247, 232, 222);
-    opacity: .8;
+    opacity: .85;
     position: absolute;
 }
