--- a/src/pages/includes/css/artPiece.css
+++ b/src/pages/includes/css/artPiece.css
@@ -27,6 +27,6 @@
     transition: 300ms;
     background-color: rgb(245, 231, 223);
     opacity: .3;
-    cursor: pointer;
+    /* cursor: pointer; */
     position: absolute;
 }
