--- a/src/pages/includes/css/projectPiece.css
+++ b/src/pages/includes/css/projectPiece.css
@@ -14,7 +14,7 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
-    padding: 1em;
+    padding: .5em;
 }
 
 .project-piece-img {
@@ -25,8 +25,9 @@
 .project-piece-img-description {
     top: 0;
     left: 0;
-    width: 27vw;
-    height: 27vw;
+    width: 27vw !important;
+    height: 27vw !important; 
+    font-size: .9em;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -34,7 +35,8 @@
     align-content: center;
     opacity: 0;
     position: absolute;
-    padding: 1em;
+    padding: .5em;
+    overflow: scroll;
 }
 
 
