--- a/src/pages/includes/css/home.css
+++ b/src/pages/includes/css/home.css
@@ -11,22 +11,10 @@
 .home-row-one {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  width: 100vw;
-  margin-bottom: -1.3em;
+  justify-content: space-around;
+  width: 75vw;
   @media screen and (width: 896px) {
     transition: 200ms;
     margin-bottom: 5em;
-  }
-}
-
-.home-row-two {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: -1.5em;
-  @media screen and (width: 896px) {
-    transition: 200ms;
-    margin-top: 5em;
   }
 }
