--- a/src/pages/includes/css/home.css
+++ b/src/pages/includes/css/home.css
@@ -6,15 +6,15 @@
     justify-content: center;
     align-content: center;
     height: 100vh;
+    margin: 0;
   }
 
 .home-row-one {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  width: 75vw;
-  @media screen and (width: 896px) {
+  align-items: center;
+  justify-content: center;
+  @media screen and (width: 100vw) {
     transition: 200ms;
-    margin-bottom: 5em;
   }
 }
