--- a/src/pages/includes/css/about.css
+++ b/src/pages/includes/css/about.css
@@ -4,7 +4,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 91vh;
+    padding-top: 50px;
+    height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .about-header {
@@ -20,7 +23,7 @@
     justify-content: center;
     width: 100vw;
     font-size: 36px;
-    font-family: 'Ramaraja';
+    /* font-family: 'Ramaraja'; */
 }
 
 .about-description {
