--- a/src/pages/includes/css/art.css
+++ b/src/pages/includes/css/art.css
@@ -4,6 +4,10 @@
     flex-direction: row;
     justify-content: center;
     align-content: flex-start;
+    padding-top: 50px;
+    /* height: 100vh; */
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .art-header {
@@ -23,7 +27,7 @@
     align-content: center;
     width: 95vw;
     font-size: 36px;
-    font-family: 'Ramaraja';
+    /* font-family: 'Ramaraja'; */
 }
 
 .art-gallery {
@@ -35,50 +39,3 @@
     justify-content: space-evenly;
     /* overflow: scroll; */
 }
-/* 
-.art-piece-container {
-    margin-bottom: 3vw;
-    position: relative;
-}
-
-.art-image {
-    top: 0;
-    left: 0;
-    width: 27vw;
-    height: 27vw;
-    position: absolute;
-}
-
-.art-image-description {
-    top: 0;
-    left: 0;
-    width: 27vw;
-    height: 27vw;
-    z-index: 1000;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-content: center;
-}
-
-.art-image:hover {
-    top: 0;
-    left: 0;
-    width: 27vw;
-    height: 27vw;
-    transition: 300ms;
-    background-color: rgb(245, 231, 223);
-    opacity: .25;
-    cursor: pointer;
-    position: absolute;
-} */
-
-/* .art-image:active {
-    width: 50vw;
-    height: 50vw;
-    transition: 300ms;
-    opacity: 1;
-    z-index: 1000;
-    position: absolute;
-} */
