--- a/src/pages/includes/css/projects.css
+++ b/src/pages/includes/css/projects.css
@@ -4,7 +4,10 @@
     flex-direction: row;
     justify-content: center;
     align-content: flex-start;
-    /* height: 95vh; */
+    padding-top: 50px;
+    /* height: 100vh; */
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .projects-header {
@@ -24,7 +27,7 @@
     align-content: center;
     width: 100vw;
     font-size: 36px;
-    font-family: 'Ramaraja';
+    /* font-family: 'Ramaraja'; */
 }
 
 .projects-gallery {
