--- a/src/pages/includes/css/projects.css
+++ b/src/pages/includes/css/projects.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-content: flex-start;
     padding-top: 50px;
-    /* height: 100vh; */
+    color: #4a3405;
     max-width: 100vw;
     overflow-x: hidden;
 }
